objects/QIDC__MDM_DCR_ims__c.object
<CustomObject>
    <description>This Object is used to store Data change request details</description>
    <fields>
        <fullName>QIDC__Additional_Information_ims__c</fullName>
        <description>This field is used to provide additional information about the DCR created</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to provide additional information about the DCR created</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>This field is used to store the country for which DCR is sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the country for which DCR is sent.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__DCR_Reason_ims__c</fullName>
        <description>This field holds the reason for this record existence.</description>
        <label>DCR Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCO_INSERT_ADD_INSERT</fullName>
                </value>
                <value>
                    <fullName>HCP_INSERT_ADD_INSERT</fullName>
                </value>
                <value>
                    <fullName>HCO_UPDATE</fullName>
                </value>
                <value>
                    <fullName>HCP_UPDATE</fullName>
                </value>
                <value>
                    <fullName>HCO_ADD_INSERT</fullName>
                </value>
                <value>
                    <fullName>HCP_ADD_INSERT</fullName>
                </value>
                <value>
                    <fullName>HCO_ADD_UPDATE</fullName>
                </value>
                <value>
                    <fullName>HCP_ADD_UPDATE</fullName>
                </value>
                <value>
                    <fullName>AFFILIATION_INSERT</fullName>
                </value>
                <value>
                    <fullName>AFFILIATION_UPDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Entity_MDM_URI_ims__c</fullName>
        <description>This field is used to store Entity MDM URI for which DCR is sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store Entity MDM URI for which DCR is sent.</inlineHelpText>
        <label>Entity MDM URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Entity_SF_ID_ims__c</fullName>
        <description>This field is used to store Salesforce record ID of the entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store Salesforce record ID of the entity.</inlineHelpText>
        <label>Entity SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Entity_Type_ims__c</fullName>
        <description>This field is used to store the Entity Type for which DCR is sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the Entity Type for which DCR is sent.</inlineHelpText>
        <label>Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__External_Info_ims__c</fullName>
        <description>This field is used to provide external information to Reltio server while sending the DCR.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to provide external information to Reltio server while sending the DCR.</inlineHelpText>
        <label>External Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Activity_ID__c</fullName>
        <description>Individual, workplace Activity ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OK Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Individual_ID__c</fullName>
        <description>Onkey Id of the Individual</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OK Individual ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Trace_Status__c</fullName>
        <description>Trace status from Onekey</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OK Trace Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Workplace_ID__c</fullName>
        <description>Onekey Id of the workplace</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OK Workplace ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_URI_ims__c</fullName>
        <description>This field is used to store parent MDM DCR URI vlaue for every related DCR.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to store parent MDM DCR URI vlaue for every related DCR.</inlineHelpText>
        <label>Parent URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Comments_ims__c</fullName>
        <description>Field to store DCR comments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to store DCR comments</inlineHelpText>
        <label>Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_JSON_ims__c</fullName>
        <description>This field is used to store the Request JSON while sending DCR.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the Request JSON while sending DCR.</inlineHelpText>
        <label>Request JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Type_ims__c</fullName>
        <description>Field to store the request type of the DCR with New or Update.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Response_JSON_ims__c</fullName>
        <description>This field is used to store the Response JSON for DCR.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the Response JSON for DCR.</inlineHelpText>
        <label>Response JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__SF_Record_ID__c</fullName>
        <description>Field to store the SF Id of DCR record being updated/created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SF Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_Reason_ims__c</fullName>
        <description>This field is used to store the Reason of Status.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the Reason of Status.</inlineHelpText>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>This field will be used to identify DCR Status.</description>
        <inlineHelpText>This field will be used to identify DCR Status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APPLIED</fullName>
                </value>
                <value>
                    <fullName>AWAITING_REVIEW</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__URI_ims__c</fullName>
        <description>This field is used to store unique MDM DCR URI vlaue for every DCR.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to store unique MDM DCR URI vlaue for every DCR.</inlineHelpText>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Data Change Request</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM DCR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>